# covid-seahirq-model

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  requirements.txt
doc/: Código COVID-19.pptx
input/: README.md
output/: result_data_BR.csv
output/testing/: xI_I0_table_SP.csv  xI_table_SP_10.csv  xI_table_SP_100.csv  xI_table_SP_1000.csv  xI_table_SP_10000.csv
scripts/: 01_R0_xI_xA.py  01_death_day_relation.py  01_death_day_relation_updated.py  01_death_day_relation_v2.py  01_plot.py  01_plot_all.py  01_plot_all_v2.py  02_R0_xI_relation.py  02_R0_xI_relation_enhanced.py  02_critical_attack.py  02_plot.py  02_plot_all.py  02_plot_critical_attack.py  03_PTest_for_Fixed_xI.py  03_PTest_for_Fixed_xI_enhanced.py  03_death_day_relation.py  03_plot_all.py  04_PTest_for_Fixed_xI.py  04_critical_attack.py  04_critical_attack_with_xa.py  04_plot_critical_attack.py  04_plot_critical_attack_all.py  06_R0_xi_xa.py  06_plot_all.py  F.csv  README.md  V.csv  bifurcation_analysis.py  bifurcation_graph_discovery_ode.py  bifurcation_graph_discovery_without_ode.py  cenario_generator.py  extrapolate_dynamic_variables.py  i0_deaths_relation.py  models.py  optimizer.py  plot_bifurcation_analysis.py  plot_results.py  plot_tests_d0_deaths_relation.py  plot_xI_table.py  run.py  (+9 more)
scripts/model/: contact_matrices.py  nextgen.py  (+2 more)
src/: #real_data_reader.cpp#  README.md  contact_matrix.h  csv_to_input.cpp  models.cpp  models.h  python_interface.cpp  real_data_reader.cpp  real_data_reader.h  scenario.cpp  scenario.h  solvers.cpp  spatial_covid0d_estrat.cpp
(+249 files in other folders)
